# gristmill

./: Cargo.toml  README.md  flake.nix  ideas.md  loc.sh  todo.md
shaders/: shader.frag  shader.vert  vert.spv
src/: cs.rs  ecs.rs  engine.rs  fs.rs  init.rs  logging.rs  main.rs  rendering.rs  vs.rs
src/ecs/: chain.rs  events.rs  order_up.rs  ordering.rs  partial_manager.rs
src/engine/: gui.rs  vertex.rs  vulkan.rs
src/engine/vulkan/: buffer_manager.rs  prelude.rs  shared_helpers.rs
src/engine/vulkan/buffer_manager/: buffer_operations.rs  buffer_pair.rs  image_handler.rs
src/systems/: mod.rs  movement.rs  prelude.rs
