[package]
name = "factory_game"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
cgmath = "0.18.0"
log = "0.4.28"
png = "0.17.0"
pretty_env_logger = "0.5.0"
thiserror = "2.0.17"
tobj = { version = "4.0.3", features = ["log"] }
vulkanalia = { version = "0.32.0", features = ["libloading", "window"] }
winit = "0.29"
