[package]
name = "factory_game"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
backtrace = "0.3.76"
cgmath = "0.18.0"
env_logger = "0.10"
imgui = "0.12.0"
imgui-winit-support = "0.12.0"
impl-trait-for-tuples = "0.2.3"
lazy_static = "1.5.0"
log = "0.4.28"
paste = "1.0.15"
png = "0.17.0"
pretty_env_logger = "0.5.0"
seq-macro = "0.3.6"
thiserror = "2.0.17"
tobj = { version = "4.0.3", features = ["log"] }
vulkanalia = { version = "0.32.0", features = ["libloading", "window"] }
winit = "0.29"
